crates/nexus-macros/tests/macro_compile_fail/aggregate_with_fields.rs
/// aggregate macro must reject structs with fields.

#[nexus::aggregate(state = (), error = (), id = ())]
struct HasFields {
    name: String,
}

fn main() {}
